# cpp-33878

./: CMakeLists.txt  CMakePresets.json  main.cpp
container/: Dockerfile  toolchain.cmake
